# chardev

./: README.md
chardev 8/website/: .project  forum.css  talent_sheet.css
chardev 9/website/: chardev9.css  index.php  list.css
cpa client/: client_test.php  cpa_client.php
database/: export.sh
database/dumps/: chardev_cataclysm_static.sql  enchants_backup.sql
database/schema/: chardev_mop.sql  chardev_mop_static.sql  chardev_user.sql
database/schemas/: chardev.sql  chardev_cataclysm.sql  chardev_cataclysm_static.sql  chardev_mop.sql  chardev_mop_static.sql  chardev_user.sql  schema_legacy.sql  schema_locale.sql  schema_master.sql  schema_static.sql
docker/: README.md  build.sh  docker-compose.yml
docker/database/: .gitignore  Dockerfile  build.sh  compile-sql.sh  run.sh  setup.sh
docker/website/: Dockerfile  build.sh  chardev.conf  php.ini  run.sh
tools/cjt/: .classpath
tools/dehasher/: .gitignore  CMakeLists.txt
tools/dehasher/src/: Resolver.cpp  Resolver.h  main.cpp
tools/dehasher/src/jenkins/: lookup3.c  lookup3.h
tools/wowdb/: build.gradle  settings.gradle
website/: Makefile  character_sheet.css  chardev8.css  down.php  export.php  filter_test.php  index.php  list.css  tooltip.css
website/app/: bootstrap.php
website/js/: Ajax.js  Chardev.js  Engine.js  Gui.js  Handler.js  all_optimised.js  build.js  cc_externs.js
website/php/: common.php  error.php  func_forum.php  js_files.php  language.php
website/public/: character_sheet.css  chardev9.css  forum.css  index.php  list.css  talent_sheet.css  tooltip.css
(+814 files in other folders)
